<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="subtitles_enabled"
        android:title="@string/pref_subtitles_title"
        android:defaultValue="true" />

    <ListPreference
        android:key="sub_lang"
        android:dependency="subtitles_enabled"
        android:title="@string/pref_subtitles_lang"
        android:defaultValue="English"
        android:entries="@array/pref_lang_entries"
        android:entryValues="@array/pref_lang_entries" />

    <ListPreference
        android:key="sub_enc"
        android:dependency="subtitles_enabled"
        android:title="@string/pref_subtitles_enc"
        android:defaultValue="auto"
        android:entries="@array/pref_enc_entries"
        android:entryValues="@array/pref_enc_values" />

</PreferenceScreen>
